...
                          fontWeight: FontWeight.bold,
                          letterSpacing: 1.2,
                        ),
                      ),
                    ),
                    const Text(
                      'ShareNest',
                      style: TextStyle(
                        color: Color.fromARGB(179, 241, 241, 241),
                        fontSize: 14,
                        fontWeight: FontWeight.w600,
                      ),
                    ),
...
                  ],
                ),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.stretch,
                  children: [
                    const Text(
                      'Create Account',
                      style: TextStyle(
                        fontSize: 28,
                        color: Colors.white,
                        fontWeight: FontWeight.bold,
                        letterSpacing: 0.2,
                      ),
...
